# xq

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  test.sh
.github/workflows/: ci.yml
benches/: commands.rs  parser.rs
src/: command.rs  errors.rs  lib.rs  main.rs  storage.rs  types.rs
src/parser/: mod.rs  string.rs
src/storage/: memory.rs  memory_storage.rs  mod.rs  rocksdb.rs
tests/: asserts.xq  errors.xq  null.xq  simple.xq  stress.xq  syntax.xq  types.xq
