[package]
name = "xq"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
bincode = "1.3.3"
bytes = "1.1.0"
futures = "0.3.17"
nom = "7.0.0"
rocksdb = { version = "0.17.0", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }

[[bin]]
name = "xq-test-runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "xqd"
path = "src/bin/daemon.rs"

[[bin]]
name = "xq"
path = "src/bin/client.rs"

[features]
default = ["memory-storage"]
memory-storage = []
rocksdb-storage = ["rocksdb"]
