[package]
name = "xq"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-recursion = "0.3.2"
async-trait = "0.1.51"
bincode = "1.3.3"
bytes = "1.1.0"
criterion = { version = "0.3.5", features = ["async_tokio"] }
futures = "0.3.17"
mktemp = "0.4.1"
nom = "7.0.0"
pretty-hex = "0.2.1"
rocksdb = { version = "0.19.0", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"

[[bin]]
name = "xq-test-runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "xqd"
path = "src/bin/daemon.rs"

[[bin]]
name = "xq"
path = "src/bin/client.rs"

[features]
default = ["memory-storage"]
memory-storage = []
rocksdb-storage = ["rocksdb"]

[[bench]]
name = "commands"
harness = false
